Update vercel.json: Add wsgiHandler configuration for Flask WSGI support
Added WSGI handler configuration and updated route pattern.

--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,15 @@
   "builds": [
     {
       "src": "index.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "wsgiHandler": "handler"
+      }
     }
   ],
   "routes": [
     {
-      "src": "/user-details",
+      "src": "/(.*)",
       "dest": "index.py"
     }
   ]
